syntax = "proto3";

package agntcy.identity.node.v1alpha1;

import "agntcy/identity/core/v1alpha1/vc.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/agntcy/identity/internal/pkg/generated/agntcy/identity/node/v1alpha1;identity_node_sdk_go";

// VC is the service that provides VC operations.
service VcService {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    name: "VcService";
  };

  // Publish
  rpc Publish(agntcy.identity.core.v1alpha1.EnvelopedCredential) returns (google.protobuf.Empty) {
    option (google.api.http) = {
            post: "/v1alpha1/vc/publish"
            body: "*"
        };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      operation_id: "PublishVerifiableCredential";
      summary: "Publish a Verifiable Credential";
    };
  }

  // Verify
  rpc Verify(agntcy.identity.core.v1alpha1.EnvelopedCredential) returns (google.protobuf.Empty) {
    option (google.api.http) = {
            post: "/v1alpha1/vc/verify"
            body: "*"
        };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      operation_id: "VerifyVerifiableCredential";
      summary: "Verify a Verifiable Credential";
    };
  }

  // Passport WellKnown endpoint
  rpc PassportWellKnown(PassportWellKnownRequest) returns (agntcy.identity.core.v1alpha1.EnvelopedCredential) {
    option (google.api.http) = {
            get: "/v1alpha1/vc/{id}/.well-known/passport.json"
        };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      operation_id: "WellKnown";
      summary: "Returns the well-known verifiable presentation for a passport";
    };
  }

  // Search
  rpc Search(SearchRequest) returns (SearchResponse) {
    option (google.api.http) = {
            post: "/v1alpha1/vc/search"
            body: "*"
        };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      operation_id: "SearchVerifiableCredentials";
      summary: "Search Verifiable Credentials";
    };
  }
}

// SearchRequest is a request to seach for VCs
message SearchRequest {
  // ID is the identifier.
  string id = 1;

  // Schema is the schema of the credential contained in the VC
  agntcy.identity.core.v1alpha1.CredentialSchema schema = 2;

  // The credential content representation in JSON-LD format
  string content = 3;
}

message SearchResponse {
  // The list of VCs that match the search criteria
  repeated agntcy.identity.core.v1alpha1.EnvelopedCredential credentials = 1;
}

message PassportWellKnownRequest {
  // The identifier.
  string id = 1;
}
